--- a/style.css
+++ b/style.css
@@ -524,6 +524,181 @@ main{
     background-repeat: no-repeat;
     vertical-align: text-bottom;
 }
+
+.plans-container--card-two{
+    position: relative;
+    width: 70%;
+    min-width: 230px;
+    max-width: 300px;
+    height: 250px;
+    margin: 50px auto 0;
+    padding: 0 15px;
+    background-color: var(--just-white);
+    border-radius: 15px;
+    box-shadow: 0 4px 8px rgba(89, 73, 30, 0.16);
+}
+
+.basic{
+    position: absolute;
+    width: 120px;
+    left: calc(50% - 60px);
+    top: -15px;
+    height: 31px;
+    font-size: 1.2rem;
+    padding: 6px;
+    background-color: var(--secondary-blue);
+    border-radius: 8px;
+    color: var(--just-white);
+}
+
+.plan-card--title-two{
+    padding-top: 30px;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    color: black;
+}
+
+.plan-card--price-two{
+    padding: 5px 0;
+    position: relative;
+    font-size: 5.2rem;
+    font-weight: bold;
+    line-height: 5.3rem;
+    color: black;
+}
+
+.plan-card--price-two::before {
+    font-size: 1.2rem;
+    font-weight: 300;
+    position: absolute;
+    content: '$';
+    font-size: 1.2rem;
+    font-weight: 500;
+    line-height: 1rem;
+    top: 20%;
+    left: calc(50% - 45px);  
+}
+
+.plan-card--saving-two{
+    color: #757575;
+    font-size: 1.2rem;
+}
+
+.plan-card--ca-two{
+    width: 150px;
+    height: 48px;
+    margin-top: 20px;
+    background-color: #faf8f7;
+    border: 2px solid var(--bitcoin-orange);
+    border-radius: 4px;
+    font-size: 1.4rem;
+    font-weight: bold;
+    line-height: 1.8rem;
+    color: var(--black);
+    font-family: 'DM Sans', sans-serif;
+}
+
+.plan-card--ca-two span{
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background-image: url('./assets/assets/icons/orange-right-arrow.svg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    vertical-align: text-bottom;
+}
+
+.plans-container--card-three{
+    position: relative;
+    width: 70%;
+    min-width: 230px;
+    max-width: 300px;
+    height: 250px;
+    margin: 50px auto 0;
+    padding: 0 15px;
+    background-color: var(--warm-black);
+    border-radius: 15px;
+    box-shadow: 0 4px 8px rgba(89, 73, 30, 0.16);
+}
+
+.all-life{
+    position: absolute;
+    width: 120px;
+    left: calc(50% - 60px);
+    top: -15px;
+    height: 31px;
+    font-size: 1.2rem;
+    padding: 6px;
+    background-color: var(--just-white);
+    border-radius: 8px;
+    color: var(--warm-black);
+    font-weight: bold;
+    border: 2px solid var(--bitcoin-orange);
+}
+
+.plan-card--title-three{
+    padding-top: 30px;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    color: var(--just-white);
+}
+
+.plan-card--price-three{
+    padding: 5px 0;
+    position: relative;
+    font-size: 5.2rem;
+    font-weight: bold;
+    line-height: 5.3rem;
+    color: var(--just-white);
+}
+
+.plan-card--price-three::before {
+    font-size: 1.2rem;
+    font-weight: 300;
+    position: absolute;
+    content: '$';
+    font-size: 1.2rem;
+    font-weight: 500;
+    line-height: 1rem;
+    top: 20%;
+    left: calc(50% - 55px);  
+}
+
+.plan-card--saving-three{
+    color: #757575;
+    font-size: 1.2rem;
+}
+
+.plan-card--ca-three{
+    width: 150px;
+    height: 48px;
+    margin-top: 20px;
+    background-color: #faf8f7;
+    border: 2px solid var(--just-white);
+    background-color: var(--secondary-blue);
+    border-radius: 4px;
+    font-size: 1.4rem;
+    font-weight: bold;
+    line-height: 1.8rem;
+    color: var(--just-white);
+    font-family: 'DM Sans', sans-serif;
+}
+
+.plan-card--ca-three span{
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background-image: url('./assets/assets/icons/orange-right-arrow.svg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    vertical-align: text-bottom;
+}
+
+
 /* Terminar las tarjetas de planes */
 
 
